# treecmd

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  PUBLISH_CHECKLIST.md  README.md  RELEASE_GUIDE.md  install.sh
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
scripts/: build-release.sh
src/: config.rs  formatter.rs  lib.rs  main.rs  walker.rs
tests/: integration.rs
